--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadplano.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadplano.properties
@@ -73,18 +73,19 @@ informacion=Informaci\u00f3n
 nce=Novedades Cargadas Exitosamente
 registroscargados=Registros Cargados (
 error=Error
-errorExtensionArchivo=Extensi\u00f3n de archivo invalida, solo se permiten archivos con extensi\u00f3n .prn 
-documentoNoExiste=El nombre del documento soporte ingresado, no existe. Verifique mayusculas y minusculas.
-reversarFallo=No se pudo reversar las novedades, ya que hay novedades liquidadas.
-exito=Exito
+errorExtensionArchivo=Extensi\u00f3n de archivo inv\u00e1lida, solo se permiten archivos con extensi\u00f3n .prn 
+documentoNoExiste=El nombre del documento soporte ingresado, no existe. Verifique may\u00fasculas y/o  min\u00fasculas.
+errorNombreArchivo= Nombre de archivo inv\u00e1lido.
+reversarFallo=No se pudo reversar las novedades, debido a que hay novedades liquidadas.
+exito=\u00c9xito
 nre=Novedades Reversadas con \u00e9xito
 registrosreversados=Registros Reversados (
-reversarDialogo=Atenci\u00f3n - Reversar Novedades
+reversarDialogo=Reversar Novedades
 documentosoporte=Doc. Soporte:  
 confirmacion=Confirmaci\u00f3n
-confirmarReversar=Va a reversar el carge de novedades con el Documento Soporte : 
+confirmarReversar=Se va a reversar el cargue de novedades con el Documento Soporte : 
 continuar=Continuar
-bvc=Atenci\u00f3n - Borrar varios cargues 
+bvc=Borrar varios cargues 
 documentosSoporte=Documentos Soporte
 cpb=Cargues Para Borrar
 borrarseleccionados=Borrar Seleccionados
@@ -93,12 +94,12 @@ registrosborrados=Registros Borrados (
 erroresdelanovedad=Errores de la Novedad
 erroresBorrarTodo=No se pudo borrar los registros de los siguientes documentos soporte: 
 yaqueexisten=Ya que existen novedades liquidadas de los mismos.
-losdemasdocumentos=Los Demas Documentos Soporte(Si lo hay), fueron borrados exitosamente.
+losdemasdocumentos=Los dem\u00e1s documentos soporte(Si los hay), fueron borrados exitosamente.
 borrartodo=[Borrar Todo]
 borrarnocargado=[Borrar No Cargado]
 novedadplanoocasional=[Novedad Plano Ocasional]
 #LOV Formulas
-formulasF=Formulas
+formulasF=F\u00f3rmulas
 buscarF=Buscar Formula: 
 nombrecortoF=Nombre Corto
 nombrelargoF=Nombre Largo
@@ -114,7 +115,9 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
@@ -163,5 +166,5 @@ editarPeriodicidad=Periodicidad
 editarTercero=Tercero
 editarSaldo=Saldo
 editarUEntera=Unidad Entera
-editarUFraccion=Unidad Fraccion
+editarUFraccion=Unidad Fracci\u00f3n
 infoRegistro=Registros:
