--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
@@ -125,3 +125,4 @@ nombreE=Nombre
 codigoE=C\u00f3digo
 tipoE=Tipo
 infoRegistro=Registros:
+operacionProceso=Operacion en proceso. Por favor espere...
