--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametro.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametro.properties
@@ -118,3 +118,4 @@ refrescar= Deshacer cambios no guardados
 ingresarvalorabuscar=Ingresar valor a buscar
 config=Configuraci\u00f3n del periodo Activo
 infoRegistro=Registros:
+operacionProceso=Operacion en proceso. Por favor espere...
