--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cerrarliquidacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cerrarliquidacion.properties
@@ -18,7 +18,7 @@ confirmarCerrar=\u00bfEsta completamente seguro que desea cerrar la liquidaci\u0
 confirmarCerrarConteoFallo=Existe una diferencia entre la cantidad de empleados parametrizados por el proceso y los dispuestos a cerrar en la Liquidaci\u00f3n por el mismo proceso
 deseacontinuar=\u00bfDesea continuar?
 confirmarBorrarComprobante1=Va a eliminar al comprobante el cual tiene el Proceso (
-confirmarBorrarComprobante2=). \u00bfEsta seguro?
+confirmarBorrarComprobante2=). \u00bfEst\u00e1 seguro?
 errorComprobante=Este proceso NO tiene acumulados de n\u00f3mina, por tal motivo no lo puede eliminar
 #Otros
 vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
@@ -28,7 +28,7 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
@@ -51,3 +51,4 @@ salir=Salir
 nombreEmpleadoXX=Nombre_Empleado
 nombreEmpleadoX=Nombre Empleado
 codigoX=Codigo
+infoRegistro=Registros:
