--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cerrarliquidacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cerrarliquidacion.properties
@@ -52,3 +52,4 @@ nombreEmpleadoXX=Nombre_Empleado
 nombreEmpleadoX=Nombre Empleado
 codigoX=Codigo
 infoRegistro=Registros:
+liquidacioncerrada=Liquidaci\u00f3n cerrada con \u00e9xito
