--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/comprobante.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/comprobante.properties
@@ -94,4 +94,4 @@ dcosto=Centro de Costo D
 saldo=Saldo
 fechapago=Fecha Pago
 fechamodificacion=Fecha Modificaci\u00f3n
-
+operacionProceso=Operaci\u00f3n en proceso. Por favor espere...
