--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -156,6 +156,7 @@ editarEmpleadoJefeCargoDesempe\u00f1ado=Empleado Jefe
 estructuraM2=Estructuras Centros Costos
 buscarECC=Buscar Estructura: 
 codigoCentroCosto=Codigo Centro Costo
+codigo=c\u00f3digo
 nombreCentroCosto=Nombre Centro Costo
 motivoLocalizacionM=Motivos Localizaciones
 buscarMLCC=Buscar Motivo: 
