--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
@@ -107,7 +107,7 @@ conceptosC=Conceptos
 buscarC=Buscar Concepto: 
 codigoC=C\u00f3digo
 descripcionC=Descripci\u00f3n
-nombreC=Nombre
+nombreEm=Empresa
 #LOV PERIODICIDAD
 periodicidadesP=Periodicidades
 buscarP=Buscar Periodicidad: 
