2016/07/11 Miguel Angel Manrique
Optimizacion página proverbio

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/proverbio.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/proverbio.properties
@@ -12,34 +12,37 @@ nuevo=Nuevo Registro
 eliminar=Borrar Registro
 duplicar=Duplicar Registro
 rastro=Rastro
+refrescar= Deshacer cambios no guardados
+salir=Salir
 #Fieldset Tablas
 proverbio=Proverbio
 mensajedelusuario=Mensaje del Usuario
 #Otros
-vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
-lovvacio=No se encontraron resultados con el criterio de busqueda.
+vacio=No se encontraron resultados para la b\u00fasqueda
+lovvacio=No se encontraron resultados con el criterio de b\u00fasqueda.
 si=Si
 no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
-atras=Atras
+atras=Atr\u00e1s
 validacionNuevo=Para agregar un nuevo proverbio es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
-cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+cambio=A\u00fan hay cambios sin guardar, \u00bfDesea guardar los cambios?
 #Tabla
 mensaje=Mensaje
 #Tabla de Abajo
 ano=A\u00f1o
 mes=Mes
-dia=Dia
+dia=D\u00eda
 #Editar
 editarMensajes=Mensaje - Proverbio
 editarA\u00f1os=A\u00f1o - Mensaje del Usuario
-editarDias=Dia - Mensaje del Usuario
+editarD\u00edas=D\u00eda - Mensaje del Usuario
 editarMeses=Mes - Mensaje del Usuario
 editarMensajes2=Mensaje - Mensaje del Usuario
 #NuevoRegistro Proverbio
@@ -49,7 +52,7 @@ mensajeNP=Mensaje:
 #NuevoRegistro Mensaje Usuario
 nuevoregistroNM= Nuevo registro - Mensaje del Usuario
 anoNM=A\u00f1o: 
-diaNM=Dia: 
+diaNM=D\u00eda: 
 mesNM=Mes: 
 mensajeNM=Mensaje: 
 #Elegir Tabla
@@ -60,28 +63,28 @@ mensajeusuarioET=Mensaje del Usuario
 duplicarregistroNP= Duplicar Registro - Proverbio
 duplicarregistroNM= Duplicar Registro - Mensaje del Usuario
 #RASTRO
-confirmarRastro=La tabla 'RECORDATORIOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistorico=La tabla RECORDATORIOS tiene rastros historicos, \u00bfDesea continuar?
-errorRastroHistorico=La tabla no tiene rastros historicos.
+confirmarRastro=La tabla 'RECORDATORIOS' tiene rastros para el registro seleccionado, \u00bfDesea continuar?
+confirmarRastroHistorico=La tabla RECORDATORIOS tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
+errorRastroHistorico=La tabla no tiene rastros hist\u00f3ricos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'RECORDATORIOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'RECORDATORIOS' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 #RASTRONF
-confirmarRastroNF=La tabla 'RECORDATORIOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistoricoNF=La tabla RECORDATORIOS tiene rastros historicos, \u00bfDesea continuar?
-errorRastroHistoricoNF=La tabla no tiene rastros historicos.
+confirmarRastroNF=La tabla 'RECORDATORIOS' tiene rastros para el registro seleccionado, \u00bfDesea continuar?
+confirmarRastroHistoricoNF=La tabla RECORDATORIOS tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
+errorRastroHistoricoNF=La tabla no tiene rastros hist\u00f3ricos.
 errorRegistroRastroNF=El registro seleccionado no tiene rastros.
 errorTablaConRastroNF=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastroNF=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistroNF=Por favor seleccione un registro.
-errorObjetosDBNF=La tabla 'RECORDATORIOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDBNF=La tabla 'RECORDATORIOS' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 #Exportar
 mensajeX=Mensaje
 anoX=Ano
 mesX=Mes
-diaX=Dia
+diaX=D\u00eda
 #Todos 
 todoslosanos=TODOS LOS A\u00d1OS
 todoslosmeses=TODOS LOS MESES
