--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
@@ -46,7 +46,7 @@ salir=Salir
 informacion=Informaci\u00f3n
 error=\u00a1Error!
 atencion=\u00a1Precauci\u00f3n!
-validacionNuevo=Para agregar una nueva novedad es necesario adicionar:
+validacionNuevo=Para agregar una nueva novedad es necesario adicionar los campos: Fecha Inicial, Empleado, Concepto, Formula, (Valor, Horas o Minutos) y tipo.
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 si=Si
 no=No
@@ -90,7 +90,7 @@ fechainicialN=Fecha Inicial:
 fechafinalN=Fecha Final: 
 valorN=Valor: 
 saldoN=Saldo: 
-codigoN=C\u00f3digo: 
+codigoN=C\u00f3digo Periodicidad: 
 descripcionperiodicidadN=Descripci\u00f3n Periodicidad: 
 nitN=N.I.T: 
 nombredelterceroN=Nombre del Tercero: 
