--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -300,7 +300,8 @@ jornadala=Seleccione la Jornada Laboral
 formapago=Seleccione la forma de Pago
 sucursalPago=Seleccione la sucursal de pago
 metodopago=Seleccione el m\u00e9todo de pago
-selecciontercero=Por favor seleccione una Entidad de Afiliaci\u00f3n a 
+selecciontercero=Por favor seleccione una Entidad de Afiliaci\u00f3n a
+advertenciaSeleccionTipoT="Hay Listas por cargar, Por favor seleccione un Tipo de Trabajador."
 ciudadresidencia=Seleccione la ciudad de Residencia
 estadocivil=Seleccione el Estado Civil
 tipotelefono=Seleccione el Tipo de Tel\u00e9fono
