--- a/DesignerRHN/DesignerRHN-war/web/WEB-INF/web.xml
+++ b/DesignerRHN/DesignerRHN-war/web/WEB-INF/web.xml
@@ -63,11 +63,11 @@
     </welcome-file-list>
     <error-page>
         <error-code>404</error-code>
-        <location>/PaginaNoEncontrada.xhtml</location>
+        <location>/paginanoencontrada.xhtml</location>
     </error-page>
     <error-page>
         <error-code>500</error-code>
-        <location>/PaginaNoEncontrada.xhtml</location>
+        <location>/paginanoencontrada.xhtml</location>
     </error-page>
     <error-page>
         <exception-type>javax.faces.application.ViewExpiredException</exception-type>
