--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos.properties
@@ -1,6 +1,6 @@
 #Tabla arriba y titulo
 titulo=Ausentismos
-codigo=Codigo
+codigo=C\u00f3digo
 nombre=Nombre
 #Botones arriba
 buscar=Buscar Empleado
@@ -14,40 +14,42 @@ xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
 #NuevoRegistro
-nuevo=Nuevo Ausentismo
+nuevo=Nuevo Registro
 tipoN=*Tipo: 
 claseN=*Clase: 
 causaN=*Causa: 
-diasN=Dias: 
+diasN=D\u00edas: 
 horasN=Horas: 
 iausenciaN=*I. Ausencia: 
 fausenciaN=F. Ausencia: 
 expedicionN=Expedici\u00f3n: 
 ipagoN=I. Pago: 
 fpagoN=F. Pago: 
-bliquidacionN=B. Liquidacion: 
-fliquidacionN=F. Liquidacion: 
-eliminar=Borrar Ausentismo
-duplicar=Duplicar Ausentismo
+bliquidacionN=B. Liquidaci\u00f3n: 
+fliquidacionN=F. Liquidaci\u00f3n: 
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 #Fieldset Tablas
 empleados=Empleados
 da=Detalles del Ausentismo
 #Otros
-vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
-lovvacio=No se encontraron resultados con el criterio de busqueda.
+vacio=No se encontraron resultados para la b\u00fasqueda
+lovvacio=No se encontraron resultados con el criterio de b\u00fasqueda.
 si=Si
 no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
-atras=Atras
+atras=Atr\u00e1s
 validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
-cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+cambio=A\u00fan hay cambios sin guardar, \u00bfDesea guardar los cambios?
+refrescar= Deshacer cambios no guardados
 #Tabla de Abajo
 ausentismo=Ausentismo
 fechas=Fechas
@@ -61,53 +63,53 @@ dias=Dias
 horas=Horas
 iausencia=I.Ausencia
 fausencia=F.Ausencia
-expedicion=Expedicion
+expedicion=Expedici\u00f3n
 ipago=I.Pago
 fpago=F.Pago
-bliquidacion=B.Liquidacion
-fliquidacion=F.Liquidacion
+bliquidacion=B.Liquidaci\u00f3n
+fliquidacion=F.Liquidaci\u00f3n
 at=AT
 ep=EP
 numero=No.Certificado
 cdiagnostico=C.D
-prorroga=Prorroga
-periodo=Periodo
+prorroga=Pr\u00f3rroga
+periodo=Per\u00edodo
 tercero=Tercero
 observaciones=Observaci\u00f3n
 #TooltipsAbajo
 tia=Fecha de inicio de la ausencia
-tfa=Fecha de finalizacion de la ausencia
+tfa=Fecha de finalizaci\u00f3n de la ausencia
 tip=Fecha de inicio del pago
-tfp=Fecha de finalizacion del pago
+tfp=Fecha de finalizaci\u00f3n del pago
 tp=Porcentaje Individual
-tbl=Base liquidacion
-tfl=Forma liquidacion
-tat=Descripcion del Accidente
-tep=Descripcion de la Enfermedad
-tcd=Codigo del Diagnostico
+tbl=Base liquidaci\u00f3n
+tfl=Forma liquidaci\u00f3n
+tat=Descripci\u00f3n del Accidente
+tep=Descripci\u00f3n de la Enfermedad
+tcd=C\u00f3digo del Diagn\u00f3stico
 tpe=Periodo relacionado para cruce de cuentas con el tercero
 #NuevoRegistro
 nuevoregistro= Nuevo Registro
 ingresarnuevo= Ingresar una nuevo Ausentismo
-modulo=MODULO DE SALUD OCUPACIONAL
+modulo=M\u00d3DULO DE SALUD OCUPACIONAL
 accident=Accidente
 enf=Enfermedad
 #DuplicarRegistro
 duplicarregistro= Duplicar Registro
 #RASTRO
-confirmarRastro=La tabla 'SOAUSENTISMOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
+confirmarRastro=La tabla 'SOAUSENTISMOS' tiene rastros para el registro seleccionado, \u00bfDesea continuar?
 confirmarRastroHistorico=La tabla SOAUSENTISMOS tiene rastros historicos, \u00bfDesea continuar?
-errorRastroHistorico=La tabla no tiene rastros historicos.
+errorRastroHistorico=La tabla no tiene rastros hist\u00f3ricos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'SOAUSENTISMOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'SOAUSENTISMOS' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 #EDITAR
 porcentaje=Porcentaje
 #LOVS
 tiposausentismo=Tipos Ausentismo
-descripcion=Descripcion
+descripcion=Descripci\u00f3n
 empleados=Empleados
 buscarE=Buscar Empelado: 
 porcentajes=Porcentajes
@@ -124,21 +126,21 @@ buscarI=Buscar IBCS:
 tipoE=Tipo
 claseE=Clase
 causaE=Causa
-diasE=Dias
+diasE=D\u00edas
 horasE=Horas
 iausenciaE=I_Ausencia
 fausenciaE=F_Ausencia
-expedicionE=Expedicion
+expedicionE=Expedici\u00f3n
 ipagoE=I_Pago
 fpagoE=F_Pago
-bliquidacionE=B_Liquidacion
-fliquidacionE=F_Liquidacion
+bliquidacionE=B_Liquidaci\u00f3n
+fliquidacionE=F_Liquidaci\u00f3n
 atE=AT
 epE=EP
 numeroE=No_Certificado
-cdiagnosticoE=C_Diagnostico
-prorrogaE=Prorroga
-periodoE=Periodo
+cdiagnosticoE=Diagn\u00f3stico
+prorrogaE=Pr\u00f3rroga
+periodoE=Per\u00edodo
 reportadaE=Reportada
 terceroE=Tercero
 observacionesE=Observaciones
@@ -151,8 +153,8 @@ ibcs=IBCS
 causasausentismo=Causas Ausentismo
 clasesausentismo=Clases Ausentismo
 fechafinal=Fecha Final
-fechanotificacion=Fecha Notificacion
-diagnosticos=Diagnosticos
+fechanotificacion=Fecha Notificaci\u00f3n
+diagnosticos=Diagn\u00f3sticos
 hora=Hora
 reportada=Reportada a la Entidad
 #LOV Formas Pagos
@@ -165,12 +167,13 @@ buscarA=Buscar Accidente:
 enfermedadesEN=Enfermedades
 buscarEN=Buscar Enfermedad: 
 #LOV PRORROGA
-prorrogasPR=Prorrogas
-buscarPR=Buscar Prorroga: 
+prorrogasPR=Pr\u00f3rrogas
+buscarPR=Buscar Pr\u00f3rroga: 
 #LOV Diagnosticos
-diagnosticosD=Diagnosticos
-buscarD=Buscar Diagnostico: 
+diagnosticosD=Diagn\u00f3sticos
+buscarD=Buscar Diagn\u00f3stico: 
 #LOV TERCEROS
 tercerosT=Terceros
 buscarT=Buscar Tercero: 
 salir=Salir
+infoRegistros=Registros:
