--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/perdireccion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/perdireccion.properties
@@ -18,6 +18,7 @@ nuevo=Nuevo Registro
 eliminar=Eliminar Registro
 duplicar=Duplicar Registro
 rastro=Rastro
+salir=Salir
 empleado=Empleado:
 codigo=Codigo:
 #Nuevo registro
