--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/proverbio.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/proverbio.properties
@@ -40,11 +40,11 @@ ano=A\u00f1o
 mes=Mes
 dia=D\u00eda
 #Editar
-editarMensajes=Mensaje - Proverbio
-editarA\u00f1os=A\u00f1o - Mensaje del Usuario
-editarD\u00edas=D\u00eda - Mensaje del Usuario
-editarMeses=Mes - Mensaje del Usuario
-editarMensajes2=Mensaje - Mensaje del Usuario
+editarMensajes=Proverbio
+editarA\u00f1os=A\u00f1o
+editarD\u00edas=D\u00eda 
+editarMeses=Mes 
+editarMensajes2=Mensaje del Usuario
 #NuevoRegistro Proverbio
 nuevoregistroNP= Nuevo Registro - Proverbio
 ingresarnuevo= Ingresar un nuevo registro
@@ -102,3 +102,4 @@ septiembre=SEPTIEMBRE
 octubre=OCTUBRE
 noviembre=NOVIEMBRE
 diciembre=DICIEMBRE
+infoRegistros=Registros:
