--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -92,7 +92,7 @@ modAfiliaciones=Afiliaciones
 eps=E.P.S.(Entidad Promotora de Salud)
 afp=A.F.P.(Aseguradora de Fondos de Pensiones)
 fondoCensantias=Fondo de Censantias
-arp=A.R.L.(Aseguradora de Riesgos Laborales)
+arp=A.R.P.(Aseguradora de Riesgos Profesionales)
 cajaCompensacion=Caja de Compensacion
 camposOpcionales=Los siguientes campos son opcionales
 modFactorRH=Factor RH
@@ -220,14 +220,14 @@ editarJornadaJornadaLaboral=Descripcion Jornada Laboral
 terceroM=Terceros Sucursales
 buscarTA=Buscar Tercero: 
 editarEPSAfiliacion=Descripcion Tercero EPS
-editarARPAfiliacion=Descripcion Tercero ARL
+editarARPAfiliacion=Descripcion Tercero ARP
 editarAFPAfiliacion=Descripcion Tercero AFP
 editarFondoAfiliacion=Descripcion Tercero Fondo
 editarCajaAfiliacion=Descripcion Tercero Caja
 tercero=Tercero
 advertenciaEPS=\u00bf Esta totalmente seguro que el tercero seleccionado es considerado como una entidad EPS ?
 advertenciaAFP=\u00bf Esta totalmente seguro que el tercero seleccionado es considerado como una entidad AFP ?
-advertenciaARP=\u00bf Esta totalmente seguro que el tercero seleccionado es considerado como una entidad ARL ?
+advertenciaARP=\u00bf Esta totalmente seguro que el tercero seleccionado es considerado como una entidad ARP ?
 estadoCivilM=Estados Civiles
 buscarECEC=Buscar Estado Civil: 
 editarEstadoEstadoCivil=Descripcion Estado Civil
