--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal.properties
@@ -13,32 +13,34 @@ eliminar=Borrar Registro
 duplicar=Duplicar Registro
 rastro=Rastro
 #RASTRO
-confirmarRastro=La tabla 'INTERCON_TOTAL' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistorico=La tabla INTERCON_TOTAL tiene rastros historicos, \u00bfDesea continuar?
-errorRastroHistorico=La tabla no tiene rastros historicos.
+confirmarRastro=La tabla 'INTERCON_TOTAL' tiene rastros para el registro seleccionado, \u00bfDesea continuar?
+confirmarRastroHistorico=La tabla INTERCON_TOTAL tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
+errorRastroHistorico=La tabla no tiene rastros hist\u00f3ricos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'INTERCON_TOTAL' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'INTERCON_TOTAL' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 #Otros
-vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
-lovvacio=No se encontraron resultados con el criterio de busqueda.
+vacio=No se encontraron resultados para la b\u00fasqueda
+lovvacio=No se encontraron resultados con el criterio de b\u00fasqueda.
 si=Si
 no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
-cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
+cambio=A\u00fan hay cambios sin guardar, \u00bfDesea guardar los cambios?
 procesoM=Procesos
 buscarP=Buscar Proceso:
-descripcion=Descripcion
-codigo=Codigo
+descripcion=Descripci\u00f3n
+codigo=C\u00f3digo
 empresaM=Empresas
 buscarE=Buscar Empresa: 
 nombre=Nombre
@@ -59,10 +61,10 @@ fechaInicial=Fecha Inicial
 fechaFinal=Fecha Final
 actualizar=Actualizar
 errorFechasParametro=Las fechas ingresadas son menores a 01/01/1900 y/o la fecha final es menor que la fecha inicial
-refrescar=Refrescar
+refrescar=Deshacer cambios no guardados
 salir=Salir
-errorFechasNull=Las fechas inicial y final no pueden ser vacias
-btnAnular=Anulacion de todos los comprobantes cerrados dentro del rango de fechas
+errorFechasNull=Las fechas inicial y final no pueden ser vac\u00edas
+btnAnular=Anulaci\u00f3n de todos los comprobantes cerrados dentro del rango de fechas
 nuevoregistro=Nuevo Registro
 ingresarnuevo=Ingresar nueva Informaci\u00f3n
 empresaN=Empresa: 
@@ -88,60 +90,61 @@ editarConceptoGenerado=Concepto - Generado
 enviar=Enviar
 deshacer=[Deshacer]
 reportecontrol=Reporte de Control
-totalC=Total Credito: 
-totalD=Total Debito: 
+totalC=Total Cr\u00e9dito: 
+totalD=Total D\u00e9bito: 
 intercontotal=Contabilizados Con Total
 empleado=Empleado
 cuenta=Cuenta
-valorDebito=Valor Debito
-valorCredito=Valor Credito
+valorDebito=Valor D\u00e9bito
+valorCredito=Valor Cr\u00e9dito
 centroCosto=Centro Costo
 editarEmpleadoIntercon=Empleado - Total
 editarTerceroIntercon=Tercero - Total
 editarCuentaIntercon=Cuenta - Total
-editarDebitoIntercon=Valor Debito
-editarCreditoIntercon=Valor Credito
+editarDebitoIntercon=Valor D\u00e9bito
+editarCreditoIntercon=Valor Cr\u00e9dito
 editarConceptoIntercon=Concepto -  Total
 editarCentroCostoIntercon=Centro Costo - Total
 empleadoX=Empleado
 cuentaX=Cuenta
 terceroX=Tercero
-debitoXX=Valor_Debito
-debitoX=Valor Debito
-creditoXX=Valor_Credito
-creditoX=Valor Credito
+debitoXX=Valor_D\u00e9bito
+debitoX=Valor D\u00e9bito
+creditoXX=Valor_Cr\u00e9dito
+creditoX=Valor Cr\u00e9dito
 conceptoX=Concepto
 centroCostoXX=Centro_Costo
 centroCostoX=Centro Costo
 valorX=Valor
-cuentaDXX=Cuenta_Debito
-cuentaDX=Cuenta Debito
-cuentaCXX=Cuenta_Credito
-cuentaCX=Cuenta Credito
+cuentaDXX=Cuenta_D\u00e9bito
+cuentaDX=Cuenta D\u00e9bito
+cuentaCXX=Cuenta_Cr\u00e9dito
+cuentaCX=Cuenta Cr\u00e9dito
 nombreEmpleadoXX=Nombre_Empleado
 nombreEmpleadoX=Nombre Empleado
 generarPlano=Generar Plano
-cerrarPeriodo=Cerrar Periodo Contable
+cerrarPeriodo=Cerrar Per\u00edodo Contable
 tipoPlano=Tipo Plano: 
 detallado=Detallado
 semiDetallado=Semi-Detallado
 resumido=Resumido
-anteriorContabilizacion=La ultima interfase enviada fue: 
+anteriorContabilizacion=La \u00faltima interfase enviada fue: 
 nuncaContabilizo=Nunca se ha realizado una contabilizaci\u00f3n
-errorFechasParametros=Las fechas ingresadas no concuerdan con las fechas parametros. Por favor, revisar las fechas para continuar.
+errorFechasParametros=Las fechas ingresadas no concuerdan con las fechas par\u00e1metros. Por favor, revisar las fechas para continuar.
 anularComprobantesCerrados=Se dispone a anular un comprobante. \u00bfEsta seguro de continuar y anular el archivo?
-procesoDeshacer=Se dispone a deshacer el proceso de contabilizacion \u00bfEsta seguro de Continuar con el proceso?
+procesoDeshacer=Se dispone a deshacer el proceso de contabilizaci\u00f3n \u00bfEst\u00e1 seguro de Continuar con el proceso?
 paso1CerrarPeriodo=En este momento va a cerrar el periodo CONTABLE para el proceso:
-paso2CerrarPeriodo=Est\u00e1 totalmente seguro?
-procesoSinDatos=El proceso no ha retornado ningun resultado en la busqueda
-contadoCeroPerContable=Este periodo de tiempo ya fue cerrado !
-operacionEnProceso=Operacion en proceso. Por favor espere un momento...
+paso2CerrarPeriodo=\u00bfEst\u00e1 totalmente seguro?
+procesoSinDatos=El proceso no ha retornado ningun resultado en la b\u00fasqueda
+contadoCeroPerContable=Este per\u00faodo de tiempo ya fue cerrado !
+operacionEnProceso=Operaci\u00f3n en proceso. Por favor espere un momento...
 paso1Recon=En este momento va a Recontabilizar y este proceso se va a tener en cuenta la configuraci\u00f3n contable de conceptos de n\u00f3mina, para que tenga efecto debe estar en estado GENERADO
-paso2Recon=Est\u00e1 totalmente seguro?
-paso3Recon1=Va a Recontabilizar del  : 
-paso3Recon2=Est\u00e1 seguro?
+paso2Recon=\u00bfEst\u00e1 totalmente seguro?
+paso3Recon1=Va a Recontabilizar del : 
+paso3Recon2=\u00bfEst\u00e1 seguro?
 errorRecon=No se puede Recontabilizar ya que nunca ha sido Contabilizado.
-reporteExito=Reporte Ejecutado con Exito
-planoGeneradoOK=El archivo plano del reporte se creo satisfactoriamente en la siguiente ruta: 
-deseaGuardarTxt=Desea guardar el archivo anterior en su equipo?
+reporteExito=Reporte Ejecutado con \u00e9xito
+planoGeneradoOK=El archivo plano del reporte se cre\u00f3 satisfactoriamente en la siguiente ruta: 
+deseaGuardarTxt=\u00bfDesea guardar el archivo anterior en su equipo?
 descargar=Descargar
+infoRegistros=Registros:
