--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/vigenciadeporte.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/vigenciadeporte.properties
@@ -27,18 +27,18 @@ aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva vigencia deporte es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
-cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
+cambio=A\u00fan hay cambios sin guardar, \u00bfDesea guardar los cambios?
 refrescar=Deshacer cambios no guardados
 #RASTRO
 confirmarRastro=La tabla 'VIGENCIASDEPORTES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistorico=La tabla VIGENCIASDEPORTES tiene rastros historicos, \u00bfDesea continuar?
-errorRastroHistorico=La tabla no tiene rastros historicos.
+confirmarRastroHistorico=La tabla VIGENCIASDEPORTES tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
+errorRastroHistorico=La tabla no tiene rastros hist\u00f3ricos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
 errorDuplicarVigenciaD=El registro ingresado ya existe.
-errorObjetosDB=La tabla 'VIGENCIASDEPORTES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'VIGENCIASDEPORTES' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 salir=Salir
 titulo=Hist\u00f3rico de Deportes
 fechaInicial=Fecha Inicial
